--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -159,7 +159,7 @@ $text-color:          #333 !default;
 // 5. Links
 //
 // Style anchor elements.
-$link-color:            $brand-primary !default;
+$link-color:            $brand-secondary !default;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: none !default;
@@ -253,8 +253,8 @@ $navbar-font-size:       $font-size-root !default;
 $mobile-navbar-height:   60px !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   $font-family-base !default;
-$headings-font-weight:   300 !default;
+$headings-font-family:   $font-family-spec !default;
+$headings-font-weight:   600 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
 
@@ -282,7 +282,7 @@ $list-padding-left:    rem(30px) !default;
 $list-inline-margin:   rem(5px) !default;
 
 //Ordered List Color (if $enable-colored-ol is true)
-$ol-number-color:      $brand-primary !default;
+$ol-number-color:      $brand-secondary !default;
 
 
 // 11. General Style Components
@@ -485,16 +485,16 @@ $code-font-size:              90% !default;
 $code-padding-x:              0.4rem !default;
 $code-padding-y:              0.2rem !default;
 $code-color:                  #bd4147 !default;
-$code-bg:                     #f7f7f9 !default;
+$code-bg:                     $gray-lighter !default;
 $code-border-radius:          rem(5px) !default;
 
 $kbd-color:                   #fff !default;
 $kbd-bg:                      #333 !default;
 $nested-kbd-font-weight:      bold !default;
 
-$pre-bg:                      #f7f7f9 !default;
-$pre-color:                   $gray-dark !default;
-$pre-border-color:            #ccc !default;
+$pre-bg:                      $gray-lighter !default;
+$pre-color:                   #bd4147 !default;
+$pre-border-color:            $gray-light !default;
 $pre-scrollable-max-height:   340px !default;
 
 // 18. Bootstrap
@@ -1324,22 +1324,6 @@ $carousel-caption-color:                      #fff !default;
 $close-font-weight:           bold !default;
 $close-color:                 #000 !default;
 $close-text-shadow:           0 1px 0 #fff !default;
-
-
-//== Code
-//
-//##
-
-$code-color:                  #c7254e !default;
-$code-bg:                     #f9f2f4 !default;
-
-$kbd-color:                   #fff !default;
-$kbd-bg:                      #333 !default;
-
-$pre-bg:                      #f5f5f5 !default;
-$pre-color:                   $gray-dark !default;
-$pre-border-color:            #ccc !default;
-$pre-scrollable-max-height:   340px !default;
 
 
 //== Type
