--- a/assets/sass/global/_subpage.scss
+++ b/assets/sass/global/_subpage.scss
@@ -13,7 +13,9 @@
 }
 
 .blog-section {
-	// @extend %gradient-section-green;
+	.home & {
+		@extend %gradient-section-green;
+	}
 	// @extend %base-pad;
 	// @extend %contrast-light-text;
 	margin: 0;
@@ -25,30 +27,34 @@
 		.home & {
 			// @include multi-column(12,4,4,4);
 		}
-		.home & {
+		.blog-overview & {
 			// @include multi-column(12,6,6,6);
 		}
 	}
 	.blog-post-inner {
 		text-align: left;
 		padding: rem(35px);
-		background-color: $gray-lightest;
-		color: $gray;
+		background-color: rgba($gray-darker, .7);
 		border-bottom: 4px solid $brand-secondary;
 		border-radius: 3px;
+		@extend %contrast-light-text;
 		.post-title {
+			font-family: $font-family-spec;
+			font-size: rem(20px);
+			font-weight: 600;
+			text-transform: uppercase;
 			border-bottom: 2px solid $brand-secondary;
-			padding: 0 0 5px 0;
+			padding: 0 0 15px 0;
 		}
 		P {
-			font-size: rem(16px);
+			// font-size: rem(16px);
 		}
 	}
 	h3 a {
-		@extend %contrast-dark-text;
+		@extend %contrast-light-text;
 	}
 	.panel-body {
-		@extend %contrast-dark-text;
+		// @extend %contrast-dark-text;
 	}
 }
 
