--- a/assets/sass/global/_custom.scss
+++ b/assets/sass/global/_custom.scss
@@ -1919,20 +1919,20 @@ hr.small {
 	position: relative;
 	width: 100%;
 	overflow: hidden;
-	background: $gray-light;
+	background: $brand-tertiary;
 	&:empty {
 		height: 0;
 		padding-bottom: 100%;
-		&:after {
-			content: '';
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: linear-gradient(90deg, rgba(0,0,0,0), rgba(255,255,255,0.15), rgba(0,0,0,0));
-			transform: translateX(-100%);
-			animation: loading 1.5s infinite;
-		}
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(90deg, rgba(0,0,0,0), rgba(255,255,255,0.15), rgba(0,0,0,0));
+		transform: translateX(-100%);
+		animation: loading 2s infinite;
 	}
 	img {
 		position: relative;
@@ -1945,7 +1945,7 @@ hr.small {
 	&:empty {
 		width: 100%;
 		height: 35px;
-		background: #d8d8d8;
+		background: $gray-darker;
 		margin-bottom: 20px;
 	}
 }
