--- a/assets/sass/global/_subpage.scss
+++ b/assets/sass/global/_subpage.scss
@@ -31,12 +31,20 @@
 			// @include multi-column(12,6,6,6);
 		}
 	}
+	.blog-post-image {
+		position: relative;
+		width: 100%;
+		max-height: 150px;
+		background-color: $brand-tertiary;
+		&:hover {
+			// background-color: $gray-darker;
+		}
+	}
 	.blog-post-inner {
 		text-align: left;
 		padding: rem(35px);
-		background-color: rgba($gray-darker, .7);
+		background-color: rgba($gray-darker, .8);
 		border-bottom: 4px solid $brand-secondary;
-		border-radius: 3px;
 		@extend %contrast-light-text;
 		.post-title {
 			font-family: $font-family-spec;
