--- a/assets/sass/modules/_blog.scss
+++ b/assets/sass/modules/_blog.scss
@@ -2,6 +2,142 @@
 	font-family: $font-family-spec;
 }
 
+.blog-section {
+	margin: 0;
+	.home & {
+		
+	}
+	.blog-post & {
+		background-color: $gray-lightest;
+	}
+	.blog-list {
+		@include clearfix();
+
+	}
+	.blog-post-content {
+		margin: rem(25px) 0;
+		box-shadow: $shadow;
+		border-radius: 5px;
+		background-color: #fff;
+		.home & {
+		}
+		.blog-post & {
+			// @include multi-column(12,9,9,9);
+			border-radius: 0;
+			background-color: transparent;
+			box-shadow: none;
+			border-right: 2px solid $brand-secondary;
+		}
+	}
+	.blog-sidebar {
+		// @include multi-column(12,3,3,3);
+		padding: rem(15px) rem(35px);
+	}
+	.blog-post-image {
+		position: relative;
+		width: 100%;
+		max-height: 150px;
+		background-color: $brand-tertiary;
+		&:hover {
+			// background-color: $gray-darker;
+		}
+	}
+	.blog-top {
+		@include clearfix();
+		// background-color: #fff; 
+		@extend %contrast-dark-text;
+		border-top: 2px solid $gray-lighter;
+		padding: rem(10px) 0;
+
+		.blog-post & {
+			@extend %contrast-light-text;
+			border-top: none;
+			padding: rem(15px) rem(35px);
+		}
+	}
+	.blog-categories {
+		list-style: none;
+		margin: 25px 0;
+		padding: 0;
+		.badge {
+			background-color: $gray-lighter;
+			color: $gray;
+			padding: 5px 10px;
+			border-radius: 5px;
+			margin-right: 15px;
+		}
+		li {
+			padding: 0;
+			border-bottom: 2px solid $brand-secondary;
+			text-transform: uppercase;
+			color: $gray-lightest;
+			a {
+				display: block;
+				padding: 10px 15px;
+			}
+		}
+
+	}
+	.post-title {
+		float: left;
+		width: 75%;
+		padding: rem(10px) rem(15px);
+		font-size: rem(18px);
+		text-transform: uppercase;
+		h4 {
+			padding: rem(5px) 0;
+			margin: 0;
+		}
+		// padding: 0 0 15px 0;
+	}
+	.post-categories {
+		display: inline-block;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		li {
+			display: inline-block;
+			margin: 0 5px;
+			a {
+				@extend %btn;
+				@extend %btn-secondary;
+				padding: rem(5px) rem(15px);
+				margin: 0;
+				&:hover {
+					padding: rem(5px) rem(15px);
+				}
+			}
+		}
+	}
+	.blog-post-inner {
+		text-align: left;
+		padding: rem(25px) rem(35px);
+		// background-color: #fff;
+		@extend %contrast-dark-text;
+		font-family: $font-family-base;
+		font-weight: 600;
+		.blog-post & {
+			@extend %contrast-light-text;
+		}
+		h3 {
+			font-family: $font-family-spec;
+			padding: rem(10px) 0;
+			border-bottom: 2px solid $brand-secondary;
+		}
+		P {
+			font-size: rem(20px);
+			font-weight: 600;
+		}
+	}
+	h3 a {
+		@extend %contrast-dark-text;
+	}
+	.panel-body {
+		// @extend %contrast-dark-text;
+	}
+}
+
 .blog-pagination {
 	margin: rem(15px) 0;
 	@include multi-column(12);
