--- a/assets/sass/global/_custom.scss
+++ b/assets/sass/global/_custom.scss
@@ -422,7 +422,7 @@ hr.small {
 
 %gradient-section,
 .gradient-section { // 8
-	@include linear-gradient(120deg, $gray-dark 0%, $gray-dark 20%, $gray-darker 80%, $gray-darker 100%);
+	@include linear-gradient(180deg, $gray-dark 0%, $gray-dark 20%, $gray-darker 80%, $gray-darker 100%);
 	@extend %dark-bg-text;
 	.caption { color: $gray; }
 }
@@ -530,8 +530,8 @@ hr.small {
 		width: 25%;
 		height: 100%;
 		text-align: center;
-		color: $gray;
-		padding: 0 rem(10px) rem(10px) rem(10px);
+		color: $gray-lighter;
+		padding: rem(5px) rem(10px) rem(10px) rem(10px);
 		border-right: 2px solid $gray-lighter;
 	} 
 }
@@ -546,11 +546,19 @@ hr.small {
 .month {
 	color: $gray;
 	@extend %custom-month;
+	.blog-overview &,
+	.home & {
+		color: $gray-lightest;
+	}
 }
 
 .day {
 	color: $gray;
 	@extend %custom-day;
+	.blog-overview &,
+	.home & {
+		color: $gray-lightest;
+	}
 }
 
 %accent-title,
@@ -570,18 +578,24 @@ hr.small {
 %contrast-dark-text { color: $gray; }
 
 .bg-custom {
+	position: relative;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
 	background-attachment: fixed;
 }
 .bg-space {
-	background-image: url('/asset/5844eb05c53de?w=900');
-	@include breakpoint-up(sm) { background-image: url('/asset/5844eb05c53de?w=1920'); }
+	background-image: url('/asset/584dc4e609e2f?w=900');
+	@include breakpoint-up(sm) { background-image: url('/asset/584dc4e609e2f?w=1920'); }
 }
 .bg-city { 
 	background-image: url('/asset/584dc4e605867?w=900');
 	@include breakpoint-up(sm) { background-image: url('/asset/584dc4e605867?w=1920'); }
+}
+
+.bg-city-night { 
+	background-image: url('/asset/584dc4e60dfaf?w=900');
+	@include breakpoint-up(sm) { background-image: url('/asset/584dc4e60dfaf?w=1920'); }
 }
 
 // Filter dropdown - Profiles/Portfolio filters
@@ -738,7 +752,6 @@ hr.small {
 	color: $gray-lightest;
 	min-height: 5vh;
 	.bct {
-		@include multi-column(12,12,12,12);
 		padding: 0;
 		ul {
 			padding: 0;
@@ -855,7 +868,6 @@ hr.small {
 		@extend %page-title-lg;
 	}
 }
-
 // Info Masthead
 //
 // Masthead containing page/module information. Used on Profile and Chamber Fusion Detail pages.
@@ -864,8 +876,8 @@ hr.small {
 .info-masthead {
 	@extend %gradient-section;
 	padding: rem(50px) 0 rem(35px);
-	a { color: inherit; }
 	min-height: 25vh;
+	a { color: inherit; }
 	.wrapper {
 		@include breakpoint-between(sm,md) {
 			padding-left: rem(40px);
@@ -1201,7 +1213,7 @@ hr.small {
 // Used on Profiles overview, Services, Chamber Fusion overview, About page template
 .sidebar {
 	@include multi-column(12,3,3,3);
-	padding: 0;
+	padding: rem(10px) rem(35px);
 	@include breakpoint-up(md) {
 		padding: rem(95px) rem(15px) rem(80px);
 	}
@@ -1214,7 +1226,7 @@ hr.small {
 		padding: 0 rem(15px);
 	}
 	.sidebar-inner {
-		border-bottom: 1px solid $border-color;
+		border: 4px solid $border-color;
 		display: none;
 		padding: rem(30px) rem(15px) rem(15px);
 		text-align: center;
@@ -1518,9 +1530,12 @@ hr.small {
 		height: 100%;
 	}
 	.caption {
+		@extend .panel;
+		@extend .panel-transparent;
 		text-align: center;
-		background: $gray-lightest;
-		padding: rem(53px) rem(30px) rem(34px);
+		color: $gray-lightest;
+		// background: $gray-lightest;
+		// padding: rem(53px) rem(30px) rem(34px);
 		position: relative;
 		box-shadow: $shadow;
 		h3 {
@@ -1556,14 +1571,7 @@ hr.small {
 		@extend %custom-month;
 	}
 }
-.author-image {
- 	@extend %custom-date;
- 	display: inline-block;
- 	float: none;
- 	margin: 5px;
-	background-color: #fff;
-	border-radius: 100%;
-}
+
 
 
 /* 5a. Sliders */
