--- a/assets/sass/global/_footer.scss
+++ b/assets/sass/global/_footer.scss
@@ -77,6 +77,11 @@ $footer-font: $navbar-font-family;
 	padding: rem(25px) 0;
 	background-color: $gray-dark;
 	color: $gray-lighter;
+	i { font-size: rem(25px); }
+	.bt-heart {
+		border-radius: 50%;
+		color: $red;
+	}
 }
 .footer-bottom {
 	position: relative;
