--- a/assets/sass/global/_typography.scss
+++ b/assets/sass/global/_typography.scss
@@ -92,7 +92,7 @@ ul.no-list-style {
 .content {
 	h2 {
 		padding: 10px 0;
-		border-bottom: 2px solid $brand-secondary;
+		border-bottom: 2px solid $gray-lighter;
 	}
 	ul {
 		margin-left: 15px;
