--- a/assets/sass/global/_custom.scss
+++ b/assets/sass/global/_custom.scss
@@ -726,22 +726,22 @@ hr.small {
 .logo {
 	position: relative;
 	display: block;
-	width: 115px;
+	width: 125px;
 	height: 85px;
 	margin: 0 auto;
 	&:before {
 		pointer-events: none;
-		font-size: 13px;
+		font-size: rem(14px);
 		font-weight: 600;
 		font-family: $font-family-spec;
-		color: $gray;
+		color: $gray-lightest;
 		content: 'vanorman.design';
 		text-transform: uppercase;
 		text-align: center;
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		letter-spacing: 2px;
+		letter-spacing: 3px;
 	}
 }
 
