--- a/assets/sass/global/global.scss
+++ b/assets/sass/global/global.scss
@@ -1,10 +1,11 @@
+@import "animations";
 @import "fonts";
 @import "code";
+@import "btn";
 @import "navbar";
 @import "input-groups";
 @import	"typography"; 
 @import "icons-custom";
-@import "animations";
 @import "panel";
 @import "header";
 @import "footer";
