--- a/assets/sass/global/global.scss
+++ b/assets/sass/global/global.scss
@@ -1,7 +1,7 @@
 @import "animations";
 @import "fonts";
 @import "code";
-@import "btn";
+@import "breadcrumb";
 @import "navbar";
 @import "input-groups";
 @import	"typography"; 
